EP-3349 (#608)
* EP-3349

* testin logitusta

* test fix test

* test fix tests 2

* testfix

* dto @data

* lombok fixes

* optional pois dtosta

* liitecontroller fix

* equalshashcode fixes